--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -27,3 +27,8 @@ h6 {
     }
   }
 }
+
+.fitText {
+  overflow-wrap: break-word;
+  word-break: break-word;
+}
